--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
       href="../../assets/favicon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./dist/style.css?cb=1679358855386" />
+    <link rel="stylesheet" href="./dist/style.css?cb=1679367257518" />
   </head>
   <body class="projects-home">
     <main id="projectsContainer"></main>
-    <script src="./dist/all.js?cb=1679358855386"></script>
+    <script src="./dist/all.js?cb=1679367257518"></script>
+    <script src="./dist/HomeProjects/render-projects.js"></script>
   </body>
 </html>
