--- a/History/me/index.html
+++ b/History/me/index.html
@@ -70,7 +70,7 @@
       <!-- ///////////////////////////////////////////////////////// -->
     </main>
 
-    <script src="/dist/all.js?cb=1679364538445"></script>
+    <script src="../../dist/all.js?cb=1679364538445"></script>
     <script src="./index.js"></script>
     <script src="../../dist/auto-screenshots.js"></script>
   </body>
