--- a/History/myTools/index.html
+++ b/History/myTools/index.html
@@ -11,7 +11,7 @@
     href="../../assets/favicon.png"
     type="image/x-icon"
   />
-  <link rel="stylesheet" href="/dist/style.css?cb=1679188123370" />
+  <link rel="stylesheet" href="../../dist/style.css?cb=1679188123370" />
   <body class="project-history">
     <nav>
       <a href="/index.html">PROJECTS</a>
