GitHub API [DONE]

--- a/History/me/index.html
+++ b/History/me/index.html
@@ -19,15 +19,15 @@
     <header>
       <h1>Me</h1>
       <div class="wrapper">
-        <!-- <iframe
+        <iframe
           src="https://www.youtube.com/embed/g0amdIcZt5I"
           title="World&#39;s Strongest Magnet!"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
-        ></iframe> -->
+        ></iframe>
         <div class="project__github-repo-info">
-          <!-- <img
+          <img
             src="https://wakatime.com/badge/user/fbdfdc0f-d449-43dc-8090-ced03a22fe8c/project/66f1a506-ac8a-4758-a8f1-f1a155c871d5.svg
           "
             alt="wakatime"
@@ -59,16 +59,12 @@
           <img
             src="https://img.shields.io/github/languages/code-size/AlexEG/me?color=5500bb&amp;style=plastic"
             alt="GitHub code size in bytes"
-          /> -->
+          />
         </div>
       </div>
     </header>
 
-    <main id="main">
-      <!-- ////////////////////////////////////////////// -->
-
-      <!-- ///////////////////////////////////////////////////////// -->
-    </main>
+    <main id="main"></main>
 
     <script src="../../dist/all.js?cb=1679364538445"></script>
     <script src="./index.js"></script>
