--- a/History/myTools/index.html
+++ b/History/myTools/index.html
@@ -61,7 +61,11 @@
         </div>
       </div>
     </header>
-
+    <div id="gridThemeBtn" class="grid-theme-btn">
+      <button>
+        <img src="../../assets/collection.png" alt="" />
+      </button>
+    </div>
     <main id="main"></main>
 
     <script src="../../dist/all.js?cb=1679364538445"></script>
