--- a/Code_Analytics/myTools/index.html
+++ b/Code_Analytics/myTools/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Analytics - Me</title>
+    <title>Code Analytics - My Tools</title>
   </head>
   <link
     rel="shortcut icon"
@@ -17,7 +17,7 @@
       <a href="/index.html">PROJECTS</a>
     </nav>
     <header></header>
-    <h1>Me</h1>
+    <h1>My Tools</h1>
 
     <main id="main">
       <h2>This feature still under development :(</h2>
