--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       href="../../assets/favicon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./dist/style.css?cb=1679691373057" />
+    <link rel="stylesheet" href="./dist/style.css?cb=1680065645827" />
   </head>
   <body class="projects-home">
+    <div class="page-noti">This Page is not ready at the moment :(</div>
     <main id="projectsContainer"></main>
-    <script src="./dist/all.js?cb=1679691373057"></script>
+    <script src="./dist/all.js?cb=1680065645827"></script>
     <script src="./dist/HomeProjects/render-projects.js"></script>
   </body>
 </html>
