--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./dist/style.css?cb=1681601235922" />
   </head>
   <body class="projects-home">
-    <div class="page-noti">This Page is not ready at the moment : (</div>
+    <div class="page-noti">This project got cancelled :(</div>
     <main id="projectsContainer"></main>
     <script src="./dist/all.js?cb=1681601235922"></script>
     <script src="./dist/HomeProjects/render-projects.js"></script>
